# haskell-error-collection

./: .ghci  README.md  hhe.cabal
app/: Main.hs
errors/: DeriveFunctorNegativePosition.hs  NoInstanceNumChar.hs  NonTypeVariableArgument.hs
message/: DeriveFunctorNegativePosition.yaml  NoInstanceNumChar.yaml  Test.yaml
src/: GenerateErrors.hs  Lib.hs
