name:                hhe
version:             0.1.0.0
synopsis:            A collection of Haskell compiler errors along with an explanation of what went wrong. The motivation is to later build a tool that will parse the errors and then rewrite them to be both more explanatory and to point out possible fixes to the user.
description:         See README.md
homepage:            https://github.com/Tehnix/hhe#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
copyright:           Christian Kjaer Laustsen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GenerateErrors
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , foldl
                     , text
                     , yaml
                     , system-filepath
  default-language:    Haskell2010

executable hhe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hhe
  default-language:    Haskell2010

test-suite hhe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hhe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tehnix/hhe
